fix(ui-common): fix FormItem label alignment

--- a/packages/ui-common/src/components/form-item/form-item.scss
+++ b/packages/ui-common/src/components/form-item/form-item.scss
@@ -13,6 +13,8 @@
       font-size: 0.8em;
       color: #577cbb;
       text-transform: capitalize;
+      text-align: left;
+      display: block;
     }
 
     &:hover {
